--- a/theme/src/pages/artist.scss
+++ b/theme/src/pages/artist.scss
@@ -91,15 +91,15 @@ section[data-test-uri^="spotify:artist:"] {
             width: 24px;
             height: 24px;
             border-radius: 0;
-            background: url('resources/playerbar/play_31.png') 0 0 / contain no-repeat;
+            background: var(--play-31) 0 0 / contain no-repeat;
             margin-top: -3px;
 
             &:hover {
-                background-image: url('resources/playerbar/play_31_hover.png');
+                background-image: var(--play-31-hover);
             }
 
             &:active {
-                background-image: url('resources/playerbar/play_31_pressed.png');
+                background-image: var(--play-31-pressed);
             }
 
             span {
